--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
             </div>
         </div>  
         <!-- Pillar -->
-        <div class= "section col s12 Pillarbg1">
-            <div class="row center rnr-parallax2">
+        <div class="section col s12 Pillarbg1 ">
+            <div class="row center">
                 <div class="layer wrapper " data-depth="0.3">
                     <div class="col s6 m12 l3 end">
                         <!-- Design based on a Dribble shot by Julius Koroll. -->
@@ -356,6 +356,42 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- <div id="container">
+                            <div class="panel" id="one">
+                                <div class="text">
+                                    <h5>Digital Marketing</h5>
+                                </div>
+                               <div class="bottom">
+                                    <a href="marketing.html">Learn More</a>
+                                </div>
+                            </div>
+                            <div class="panel" id="two">
+                                <div class="text">
+                                    <h5>Lead Generation</h5>
+                                </div>
+                                <div class="bottom">
+                                    <a href="lead.html">Learn More</a>
+                                </div>
+                            </div>
+                            <div class="panel" id="three">
+                                <div class="text">
+                                    <h5>Customer Support<br>
+                                    <strong>Back End</strong></h5>
+                                </div>
+                                <div class="bottom">
+                                    <a href="backend.html">Learn More</a>
+                                </div>
+                            </div>
+                            <div class="panel" id="four">
+                                <div class="text">
+                                    <h5>Customer Support<br>
+                                    <strong>Front End</strong></h5>
+                                </div>
+                                <div class="bottom">
+                                    <a href="frontend.html">Learn More</a>
+                                </div>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -451,15 +487,6 @@
     <script src="assets/js/parallax.min.js"></script> 
     <script src="assets/js/jquery.backgroundMove.js"></script>
     <script src="assets/js/pillar.js"></script>
-    <script>
-        var scene = document.getElementById('scene');
-        var parallax = new Parallax(scene);
-    </script> 
-    <!--     
-        <script type="text/javascript">
-            $('.Pillarbg1').backgroundMove({movementStrength:'500'});
-        </script> 
-    -->
     <!-- SIDE NAV JS -->
     <script> 
         $('.datepicker').pickadate({
