--- a/index.html
+++ b/index.html
@@ -546,6 +546,11 @@
             ampmclickable: true, // make AM PM clickable
             aftershow: function(){} //Function for after opening timepicker
         });
+
+        let h = window.height, w = window.width;
+
+        console.log(h);
+        console.log(w);
     </script>
 </body>
 </html>
