--- a/Lead.html
+++ b/Lead.html
@@ -13,12 +13,72 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <link href="assets/css/jquery.fullpage.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/nav.css" rel="stylesheet" type="text/css">
-
-
+    <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/navbarD.css" rel="stylesheet" type="text/css">
+    <script src="assets/js/snap.svg-min.js"></script>
 </head>
 <body>
+    <div class="container">
+        <nav class="menu" id="menu">
+            <button class="menu__handle"><span>Menu</span></button>
+            <div class="menu__inner">
+                <ul>
+                    <li><a href="#"><span>Lead Generation<span></span></span></a> </li>
+                    <li><span><a href="#"><span>Digital Marketing<span></span></span></a></span></li>
+                    <li><span><a href="#"><span>Customer Support Back End<span></span></span></a></span></li>
+                    <li><span><a href="#"><span>Customer Support Front End<span></span></span></a></span></li>
+                    <li><span><a href="#"><span>Social Media Management<span></span></span></a></span></li>
+                    <li><span><a href="#"><span>Website Development<span></span></span></a></span></li>
+                </ul>
+            </div>
+            <div class="morph-shape" data-morph-close="M300-10C300-10,5,154,5,400c0,232,295,410,295,410" data-morph-open="M300-10c0,0,295,164,295,410c0,232-295,410-295,410">
+                <span><svg height="100%" preserveaspectratio="none" viewbox="0 0 600 800" width="100%">
+                <path d="M300-10c0,0,0,164,0,410c0,232,0,410,0,410" fill="none"></path></svg></span>
+            </div><span></span>
+        </nav>
+                <div class="section related"> <!-- contact us -->
+                    <div class="row center rnr-parallax6">
+                        <div class="layer" data-depth="0.3">
+                            <h1>Contact Us</h1>
+                            <div class="rnr-divider"></div>
+                            <div class="col s12 m8 l6 offset-l3 offset-m2 white-text">
+                                <div class="row">
+                                    <div class="row">
+                                        <form class="col s12" method="post" id="form_query">
+                                            <div class="row">
+                                                <div class="input-field col s6">
+                                                    <input class="validate" id="field_name" name="field_name" type="text"> <label for="field_name">First Name</label>
+                                                </div>
+                                                <div class="input-field col s6">
+                                                    <input class="validate" id="field_lastname" name="field_lastname" type="text"> <label for="field_lastname">Last Name</label>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="input-field col s12">
+                                                    <input class="validate" id="field_email" name="field_email" type="email"> <label for="field_email">Email</label>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="input-field col s12">
+                                                    <textarea class="materialize-textarea" name="field_message" id="field_message"></textarea>
+                                                    <label for="textarea1">Message</label>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col s12">
+                                                    <button class="rnr-button waves-effect waves-light">Send</button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+    </div><!-- /container -->
 
 
     <script src="assets/js/jquery.min.js"></script> 
@@ -32,9 +92,59 @@
     <script src="assets/js/validation/additional-methods.min.js"></script> 
     <script src="assets/js/system.js"></script> 
     <script src="assets/js/scripts.js"></script> 
-    <script src="assets/js/parallax.min.js"></script> 
     <script src="assets/js/jquery.backgroundMove.js"></script>
-        <script src="assets/js/pixie.js"></script> 
- 
+     <script src="assets/js/navbar.js"></script> 
+            <script>
+            (function() {
+
+                function SVGMenu( el, options ) {
+                    this.el = el;
+                    this.init();
+                }
+
+                SVGMenu.prototype.init = function() {
+                    this.trigger = this.el.querySelector( 'button.menu__handle' );
+                    this.shapeEl = this.el.querySelector( 'div.morph-shape' );
+
+                    var s = Snap( this.shapeEl.querySelector( 'svg' ) );
+                    this.pathEl = s.select( 'path' );
+                    this.paths = {
+                        reset : this.pathEl.attr( 'd' ),
+                        open : this.shapeEl.getAttribute( 'data-morph-open' ),
+                        close : this.shapeEl.getAttribute( 'data-morph-close' )
+                    };
+
+                    this.isOpen = false;
+
+                    this.initEvents();
+                };
+
+                SVGMenu.prototype.initEvents = function() {
+                    this.trigger.addEventListener( 'click', this.toggle.bind(this) );
+                };
+
+                SVGMenu.prototype.toggle = function() {
+                    var self = this;
+
+                    if( this.isOpen ) {
+                        classie.remove( self.el, 'menu--anim' );
+                        setTimeout( function() { classie.remove( self.el, 'menu--open' );   }, 250 );
+                    }
+                    else {
+                        classie.add( self.el, 'menu--anim' );
+                        setTimeout( function() { classie.add( self.el, 'menu--open' );  }, 250 );
+                    }
+                    this.pathEl.stop().animate( { 'path' : this.isOpen ? this.paths.close : this.paths.open }, 350, mina.easeout, function() {
+                        self.pathEl.stop().animate( { 'path' : self.paths.reset }, 800, mina.elastic );
+                    } );
+                    
+                    this.isOpen = !this.isOpen;
+                };
+
+                new SVGMenu( document.getElementById( 'menu' ) );
+
+            })();
+        </script>
+
 </body>
 </html>
