--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="fullpage">
 
         <!-- header -->
-        <div class="section col s12 bg ">
+        <div class="section col s12 ">
             <div class="row center rnr-parallax1">
                 <div class="layer" data-depth="0.3">
 
