--- a/Lead.html
+++ b/Lead.html
@@ -36,48 +36,17 @@
                 <path d="M300-10c0,0,0,164,0,410c0,232,0,410,0,410" fill="none"></path></svg></span>
             </div><span></span>
         </nav>
-                <div class="section related"> <!-- contact us -->
-                    <div class="row center rnr-parallax6">
-                        <div class="layer" data-depth="0.3">
-                            <h1>Contact Us</h1>
-                            <div class="rnr-divider"></div>
-                            <div class="col s12 m8 l6 offset-l3 offset-m2 white-text">
-                                <div class="row">
-                                    <div class="row">
-                                        <form class="col s12" method="post" id="form_query">
-                                            <div class="row">
-                                                <div class="input-field col s6">
-                                                    <input class="validate" id="field_name" name="field_name" type="text"> <label for="field_name">First Name</label>
-                                                </div>
-                                                <div class="input-field col s6">
-                                                    <input class="validate" id="field_lastname" name="field_lastname" type="text"> <label for="field_lastname">Last Name</label>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="input-field col s12">
-                                                    <input class="validate" id="field_email" name="field_email" type="email"> <label for="field_email">Email</label>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="input-field col s12">
-                                                    <textarea class="materialize-textarea" name="field_message" id="field_message"></textarea>
-                                                    <label for="textarea1">Message</label>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col s12">
-                                                    <button class="rnr-button waves-effect waves-light">Send</button>
-                                                </div>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
+                <section class="related">
+                    <p>If you enjoyed this demo you might also like:</p>
+                    <a href="http://tympanus.net/Development/WobblySlideshowEffect/">
+                        <img src="img/related/WobblySlideshowEffect.png" />
+                        <h3>Wobbly Slideshow Effect</h3>
+                    </a>
+                    <a href="http://tympanus.net/Tutorials/ShapeHoverEffectSVG/">
+                        <img src="img/related/ShapeHoverEffect.png" />
+                        <h3>Shape Hover Effect</h3>
+                    </a>
+                </section>
     </div><!-- /container -->
 
 
