updated. confilct with pillar.js;

--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@
             <div class="row center">
                 <div class="layer wrapper" data-depth="0.3">
                     <div class="col s6 m12 l3 end" id="container">
-                        <!-- desktop -->
+                        <!-- mobile -->
                         <div class="hide-on-med-only hide-on-large-only" id='display_mobile'>
-                            <div class="panel col s12 one">
+                            <div data-count='one' class="panel col s12 ">
                                 <div class="bottom">
                                     <a href="marketing.html">Learn More</a>
                                 </div>
@@ -329,7 +329,7 @@
                                     <h5>Digital Marketing</h5>
                                 </div>
                             </div>
-                            <div class="panel col s12 two">
+                            <div data-count='two' class="panel col s12 ">
                                 <div class="bottom">
                                     <a href="lead.html">Learn More</a>
                                 </div>
@@ -337,7 +337,7 @@
                                     <h5>Lead Generation</h5>
                                 </div>
                             </div>
-                            <div class="panel col s12 three">
+                            <div data-count='three' class="panel col s12 ">
                                 <div class="bottom">
                                     <a href="backend.html">Learn More</a>
                                 </div>
@@ -346,7 +346,7 @@
                                     <strong>Back End</strong></h5>
                                 </div>
                             </div>
-                            <div class="panel col s12 four">
+                            <div data-count='four' class="panel col s12 ">
                                 <div class="bottom">
                                     <a href="frontend.html">Learn More</a>
                                 </div>
@@ -357,7 +357,7 @@
                             </div>
                         </div><!-- tablet -->
                         <div class="hide-on-small-only hide-on-large-only" id='display_tablet'>
-                            <div class="panel col s3 one">
+                            <div data-count='one' class="panel col s3 ">
                                 <div class="bottom">
                                     <a href="marketing.html">Learn More</a>
                                 </div>
@@ -365,7 +365,7 @@
                                     <h5>Digital Marketing</h5>
                                 </div>
                             </div>
-                            <div class="panel col s3 two">
+                            <div data-count='two' class="panel col s3 ">
                                 <div class="bottom">
                                     <a href="lead.html">Learn More</a>
                                 </div>
@@ -373,7 +373,7 @@
                                     <h5>Lead Generation</h5>
                                 </div>
                             </div>
-                            <div class="panel col s3 three">
+                            <div data-count='three' class="panel col s3 ">
                                 <div class="bottom">
                                     <a href="backend.html">Learn More</a>
                                 </div>
@@ -382,7 +382,7 @@
                                     <strong>Back End</strong></h5>
                                 </div>
                             </div>
-                            <div class="panel col s3 four">
+                            <div data-count='four' class="panel col s3 ">
                                 <div class="bottom">
                                     <a href="frontend.html">Learn More</a>
                                 </div>
@@ -393,7 +393,7 @@
                             </div>
                         </div><!-- desktop -->
                         <div class="hide-on-med-only hide-on-small-only" id='display_desktop'>
-                            <div class="panel one">
+                            <div data-count='one' class="panel">
                                 <div class="bottom">
                                     <a href="marketing.html">Learn More</a>
                                 </div>
@@ -401,7 +401,7 @@
                                     <h5>Digital Marketing</h5>
                                 </div>
                             </div>
-                            <div class="panel two">
+                            <div data-count='two' class="panel ">
                                 <div class="bottom">
                                     <a href="lead.html">Learn More</a>
                                 </div>
@@ -409,7 +409,7 @@
                                     <h5>Lead Generation</h5>
                                 </div>
                             </div>
-                            <div class="panel three">
+                            <div data-count='three' class="panel ">
                                 <div class="bottom">
                                     <a href="backend.html">Learn More</a>
                                 </div>
@@ -418,7 +418,7 @@
                                     <strong>Back End</strong></h5>
                                 </div>
                             </div>
-                            <div class="panel four">
+                            <div data-count='four' class="panel ">
                                 <div class="bottom">
                                     <a href="frontend.html">Learn More</a>
                                 </div>
