--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                             </div>
                         </div><!-- desktop -->
                         <div class="hide-on-med-only hide-on-small-only" id='display_desktop'>
-                            <div data-count='one' class="panel">
+                            <div data-count='one' class="panel" id="a">
                                 <div class="bottom">
                                     <a href="marketing.html">Learn More</a>
                                 </div>
@@ -401,7 +401,7 @@
                                     <h5>Digital Marketing</h5>
                                 </div>
                             </div>
-                            <div data-count='two' class="panel">
+                            <div data-count='two' class="panel" id="b">
                                 <div class="bottom">
                                     <a href="lead.html">Learn More</a>
                                 </div>
@@ -409,7 +409,7 @@
                                     <h5>Lead Generation</h5>
                                 </div>
                             </div>
-                            <div data-count='three' class="panel">
+                            <div data-count='three' class="panel" id="c">
                                 <div class="bottom">
                                     <a href="backend.html">Learn More</a>
                                 </div>
@@ -418,7 +418,7 @@
                                     <strong>Back End</strong></h5>
                                 </div>
                             </div>
-                            <div data-count='four' class="panel">
+                            <div data-count='four' class="panel" id="d">
                                 <div class="bottom">
                                     <a href="frontend.html">Learn More</a>
                                 </div>
