--- a/Lead.html
+++ b/Lead.html
@@ -17,38 +17,42 @@
     <link href="assets/css/navbarD.css" rel="stylesheet" type="text/css">
     <script src="assets/js/snap.svg-min.js"></script>
 </head>
-<body>
-    <div class="container">
-        <nav class="menu" id="menu">
-            <button class="menu__handle"><span>Menu</span></button>
-            <div class="menu__inner">
-                <ul>
-                    <li><a href="#"><span>Lead Generation<span></span></span></a> </li>
-                    <li><span><a href="#"><span>Digital Marketing<span></span></span></a></span></li>
-                    <li><span><a href="#"><span>Customer Support Back End<span></span></span></a></span></li>
-                    <li><span><a href="#"><span>Customer Support Front End<span></span></span></a></span></li>
-                    <li><span><a href="#"><span>Social Media Management<span></span></span></a></span></li>
-                    <li><span><a href="#"><span>Website Development<span></span></span></a></span></li>
-                </ul>
-            </div>
-            <div class="morph-shape" data-morph-close="M300-10C300-10,5,154,5,400c0,232,295,410,295,410" data-morph-open="M300-10c0,0,295,164,295,410c0,232-295,410-295,410">
-                <span><svg height="100%" preserveaspectratio="none" viewbox="0 0 600 800" width="100%">
-                <path d="M300-10c0,0,0,164,0,410c0,232,0,410,0,410" fill="none"></path></svg></span>
-            </div><span></span>
-        </nav>
-                <section class="related">
-                    <p>If you enjoyed this demo you might also like:</p>
-                    <a href="http://tympanus.net/Development/WobblySlideshowEffect/">
-                        <img src="img/related/WobblySlideshowEffect.png" />
-                        <h3>Wobbly Slideshow Effect</h3>
-                    </a>
-                    <a href="http://tympanus.net/Tutorials/ShapeHoverEffectSVG/">
-                        <img src="img/related/ShapeHoverEffect.png" />
-                        <h3>Shape Hover Effect</h3>
-                    </a>
-                </section>
-    </div><!-- /container -->
-
+    <body>
+        <div class="container">
+            <nav id="menu" class="menu">
+                <button class="menu__handle"><span>Menu</span></button>
+                <div class="menu__inner">
+                    <ul>
+                        <li><a href="#"><i class="fa fa-fw fa-home"></i><span>Home<span></a></li>
+                        <li><a href="#"><i class="fa fa-fw fa-heart"></i><span>Favs<span></a></li>
+                        <li><a href="#"><i class="fa fa-fw fa-folder"></i><span>Files<span></a></li>
+                        <li><a href="#"><i class="fa fa-fw fa-tachometer"></i><span>Stats<span></a></li>
+                    </ul>
+                </div>
+                <div class="morph-shape" data-morph-open="M300-10c0,0,295,164,295,410c0,232-295,410-295,410" data-morph-close="M300-10C300-10,5,154,5,400c0,232,295,410,295,410">
+                    <svg width="100%" height="100%" viewBox="0 0 600 800" preserveAspectRatio="none">
+                        <path fill="none" d="M300-10c0,0,0,164,0,410c0,232,0,410,0,410"/>
+                    </svg>
+                </div>
+            </nav>
+            <div class="main">
+  <div class="col s12 m7 l8">
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="assets/images/background/pillars/bg3.jpg" width="600px" height="400px">
+      </div>
+      <div class="card-stacked">
+        <div style="color: black" class="card-content">
+          <p>I am a very simple card. I am good at containing small bits of information.</p>
+        </div>
+        <div class="card-action">
+          <a href="#">Let's Talk</a>
+        </div>
+      </div>
+    </div>
+  </div>  
+            </div><!-- /main -->
+        </div><!-- /container -->
 
     <script src="assets/js/jquery.min.js"></script> 
     <script src="assets/js/jquery.easings.min.js"></script> 
@@ -61,8 +65,7 @@
     <script src="assets/js/validation/additional-methods.min.js"></script> 
     <script src="assets/js/system.js"></script> 
     <script src="assets/js/scripts.js"></script> 
-    <script src="assets/js/jquery.backgroundMove.js"></script>
-     <script src="assets/js/navbar.js"></script> 
+    <script src="assets/js/navbar.js"></script> 
             <script>
             (function() {
 
